fix add task  validation layer shift

--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -214,6 +214,7 @@ textarea::-ms-input-placeholder {
 }
 .red {
   color: red;
+  position: absolute;
 }
 
 .add-subtask-img {
